--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fmp4-mp4-remuxer",
   "version": "0.1.1",
   "description": "Browser/Node-friendly fMP4 fragments to MP4 remuxer (video track)",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "type": "module",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
@@ -25,6 +25,7 @@
     "build": "tsup",
     "dev": "tsup --watch",
     "clean": "rimraf dist",
+    "prepublishOnly": "npm run clean && npm run build && npm run typecheck",
     "typecheck": "tsc -p tsconfig.json --noEmit"
   },
   "devDependencies": {
