--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Browser/Node-friendly fMP4 fragments to MP4 remuxer (video track)",
   "license": "MIT",
   "type": "module",
+
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
+
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -14,13 +16,35 @@
       "require": "./dist/index.cjs"
     }
   },
+
   "bin": {
-    "fmp4-mp4-remuxer": "dist/cli.js"
+    "fmp4-mp4-remuxer": "./dist/cli.js"
   },
-  "files": [
-    "dist"
-  ],
+
+  "files": ["dist"],
   "sideEffects": false,
+
+  "keywords": [
+    "mp4",
+    "fmp4",
+    "remux",
+    "video",
+    "dash",
+    "cmaf",
+    "media",
+    "iso-bmff"
+  ],
+
+  "homepage": "https://github.com/amanhalyal/fmp4-mp4-remuxer#readme",
+  "bugs": {
+    "url": "https://github.com/amanhalyal/fmp4-mp4-remuxer/issues"
+  },
+
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/amanhalyal/fmp4-mp4-remuxer.git"
+  },
+
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
@@ -28,6 +52,7 @@
     "prepublishOnly": "npm run clean && npm run build && npm run typecheck",
     "typecheck": "tsc -p tsconfig.json --noEmit"
   },
+
   "devDependencies": {
     "@types/node": "^22.13.1",
     "rimraf": "^6.0.1",
